docs: :memo: Add Readme.md

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -27,17 +27,17 @@
         <ul class="navbar-nav">
           {% if current_user.is_authenticated %}
           <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="/profile/user/{{ current_user.id }}">Perfil</a>
+            <a class="nav-link active text-white" aria-current="page" href="/profile/user/{{ current_user.id }}">Profile</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="/logout">Sair</a>
+            <a class="nav-link text-white" href="/logout">Logout</a>
           </li>
           {% else %}
           <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="/login">Entrar na Conta</a>
+            <a class="nav-link active text-white" aria-current="page" href="/login">Login</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-white" href="/sign-in">Criar Conta</a>
+            <a class="nav-link text-white" href="/sign-in">Register</a>
           </li>
           {% endif %}
         </ul>
