--- a/app/templates/profile.html
+++ b/app/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 {% block title %}{{current_user.username}}
-- Perfil{% endblock %}
+- Profile{% endblock %}
 {% block content %}
 <header>
   {{ super() }}
@@ -10,7 +10,7 @@
     <h1>{{ current_user.username }}</h1>
     <p>Email:
       {{ current_user.email }}</p>
-    <a href="/delete" class="btn btn-danger">Excluir Conta</a>
+    <a href="/delete" class="btn btn-danger">Delete Account</a>
   </div>
 </main>
 {% endblock %}
